--- a/src/main/resources/templates/startpage.html
+++ b/src/main/resources/templates/startpage.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Вход</title>
+    <title>Стартовая страница</title>
 
     <!-- Bootstrap CSS (jsDelivr CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,59 +65,30 @@
         <div>
             <h3 class="float-md-start mb-0">Система управления</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link" th:href="@{/}">Главная</a>
-                <a class="nav-link active" th:href="@{/login}">Вход</a>
+                <a class="nav-link active" th:href="@{/}">Главная</a>
+                <a class="nav-link" th:href="@{/login}">Вход</a>
                 <a class="nav-link" th:href="@{/registration}">Регистрация</a>
             </nav>
         </div>
     </header>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-md-offset-3">
-                <h1> Sign-in </h1>
-                <form th:action="@{/login}" method="post">
-
-                    <!-- error message -->
-                    <div th:if="${param.error}">
-                        <div class="alert alert-danger">Invalid username or
-                            password.
-                        </div>
-                    </div>
-
-                    <!-- logout message -->
-                    <div th:if="${param.logout}">
-                        <div class="alert alert-info">You have been logged out.</div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="username"> Username: </label>
-                        <input type="text" class="form-control" id="username" name="username"
-                               placeholder="Enter Email" autofocus="autofocus">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password"> Password: </label>
-                        <input type="password"
-                               id="password" name="password"
-                               class="form-control"
-                               placeholder="Enter Password"/>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="m-4">
-                            <input type="submit" name="login-submit" id="login-submit"
-                                   class="form-control btn btn-primary" value="Log In"/>
-                        </div>
-                    </div>
-                </form>
-                <div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
-								here</a></span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <main class="px-3">
+        <h1>Система управления персоналом на IT-предприятии</h1>
+        <p class="lead fs-6">В нынешнее время все компании – от малого до крупного размера
+            нуждаются в информационных технологиях для того, чтобы выдерживать
+            конкуренцию в условиях повсеместного использования
+            высокотехнологичных решений. Однако специфика средств IT и методов их
+            внедрения, эксплуатации и сопровождения в зависимости от масштаба
+            предприятия может существенно отличаться. Если необходимый набор
+            средств IT в случае с фирмой с численностью штата до 50 человек может
+            исчерпываться только одной автоматизированной системой учета и одним
+            системным администратором средней квалификации, то крупной
+            организации необходим комплексный подход к созданию IT
+            инфраструктуры, который включает в себя создание IT отдела. </p>
+<!--        <p class="lead">-->
+<!--            <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Узнать больше</a>-->
+<!--        </p>-->
+    </main>
 
     <footer class="mt-auto text-white-50">
         <p> &copy; 2022 - Курсовая работа - Артем Кондратович - <a
