--- a/src/main/resources/templates/add_employee.html
+++ b/src/main/resources/templates/add_employee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Employee Management System</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -10,27 +10,27 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Employee Management System</h1>
+		<h1>Система управления персоналом</h1>
 		<hr>
-		<h2>Save Employee</h2>
+		<h2>Добавить сотрудника</h2>
 
-		<form action="#" th:action="@{/saveEmployee}" th:object="${employee}"
+		<form action="#" th:action="@{/manager/employees/save}" th:object="${employee}"
 			method="POST">
 			<input type="text" th:field="*{firstName}"
-				placeholder="Employee First Name" class="form-control mb-4 col-4">
+				placeholder="Имя" class="form-control mb-4 col-4">
 				
 				<input type="text" th:field="*{lastName}"
-				placeholder="Employee Last Name" class="form-control mb-4 col-4">
+				placeholder="Фамилия" class="form-control mb-4 col-4">
 				
 				<input type="text" th:field="*{email}"
-				placeholder="Employee Email" class="form-control mb-4 col-4">
+				placeholder="Почта" class="form-control mb-4 col-4">
 				
-				<button type="submit" class="btn btn-info col-2"> Save Employee</button>
+				<button type="submit" class="btn btn-info col-2">Добавить</button>
 		</form>
 		
 		<hr>
 		
-		<a th:href = "@{/}"> Back to Employee List</a>
+		<a th:href = "@{/manager/employees}">Вернуться к списку сотрудников</a>
 	</div>
 </body>
 </html>
