--- a/src/main/resources/templates/add_customer.html
+++ b/src/main/resources/templates/add_customer.html
@@ -14,19 +14,32 @@
     <hr>
     <h2>Добавить заказчика</h2>
 
+
     <form action="#" th:action="@{/manager/customers/save}" th:object="${customer}"
           method="POST">
+
+        <div th:if="${#fields.hasErrors()}" class="alert alert-danger">
+            <p th:if="${#fields.hasErrors('firstName')}">- Имя должно быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('lastName')}">- Фамилия должна быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('email')}">- Некорректная почта</p>
+            <p th:if="${#fields.hasErrors('location')}">- Расположение должно быть больше 1 и меньше 50 символов</p>
+        </div>
+
         <input type="text" th:field="*{firstName}"
-               placeholder="Имя" class="form-control mb-4 col-4">
+               placeholder="Имя"
+               th:class="${#fields.hasErrors('firstName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
         <input type="text" th:field="*{lastName}"
-               placeholder="Фамилия" class="form-control mb-4 col-4">
+               placeholder="Фамилия" class="form-control mb-4 col-4"
+               th:class="${#fields.hasErrors('lastName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
         <input type="text" th:field="*{email}"
-               placeholder="Почта" class="form-control mb-4 col-4">
+               placeholder="Почта" class="form-control mb-4 col-4"
+               th:class="${#fields.hasErrors('email')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
         <input type="text" th:field="*{location}"
-               placeholder="Расположение" class="form-control mb-4 col-4">
+               placeholder="Расположение" class="form-control mb-4 col-4"
+               th:class="${#fields.hasErrors('location')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
         <button type="submit" class="btn btn-info col-2">Добавить</button>
     </form>
