--- a/src/main/resources/templates/add_employee.html
+++ b/src/main/resources/templates/add_employee.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Employee Management System</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Employee Management System</title>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
 </head>
 <body>
-	<div class="container">
-		<h1>Система управления персоналом</h1>
-		<hr>
-		<h2>Добавить сотрудника</h2>
+<div class="container">
+    <h1>Система управления персоналом</h1>
+    <hr>
+    <h2>Добавить сотрудника</h2>
 
-		<form action="#" th:action="@{/manager/employees/save}" th:object="${employee}"
-			method="POST">
-			<input type="text" th:field="*{firstName}"
-				placeholder="Имя" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{lastName}"
-				placeholder="Фамилия" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{email}"
-				placeholder="Почта" class="form-control mb-4 col-4">
-				
-				<button type="submit" class="btn btn-info col-2">Добавить</button>
-		</form>
-		
-		<hr>
-		
-		<a th:href = "@{/manager/employees}">Вернуться к списку сотрудников</a>
-	</div>
+    <div th:if="${param.passwordsMismatch}">
+        <div class="alert alert-danger">
+            Указанные пароли не совпадают!
+        </div>
+    </div>
+
+    <form action="#" th:action="@{/manager/employees/save}" th:object="${employee}"
+          method="POST">
+
+        <div th:if="${#fields.hasErrors()}" class="alert alert-danger">
+            <p th:if="${#fields.hasErrors('firstName')}">- Имя должно быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('lastName')}">- Фамилия должна быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('email')}">- Некорректная почта</p>
+            <p th:if="${#fields.hasErrors('password')}">- Некорректный пароль</p>
+        </div>
+
+        <input type="text" th:field="*{firstName}"
+               placeholder="Имя" th:class="${#fields.hasErrors('firstName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+        <input type="text" th:field="*{lastName}"
+               placeholder="Фамилия" th:class="${#fields.hasErrors('lastName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+        <input type="text" th:field="*{email}"
+               placeholder="Почта" th:class="${#fields.hasErrors('email')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+        <label th:for="*{position_id}">Должность</label>
+        <select th:field="*{position_id}" class="form-control mb-4 col-4">
+            <option th:each="pos : ${listPositions}" th:value="${pos.id}" th:text="${pos.positionName}"></option>
+        </select>
+
+        <input type="password" th:field="*{password}"
+               placeholder="Пароль" th:class="${#fields.hasErrors('password')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+        <input type="password" th:field="*{repeatedPassword}"
+               placeholder="Повторите пароль" th:class="${#fields.hasErrors('password')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+        <button type="submit" class="btn btn-info col-2">Добавить</button>
+    </form>
+
+    <hr>
+
+    <a th:href="@{/manager/employees}">Вернуться к списку сотрудников</a>
+</div>
 </body>
 </html>
