--- a/src/main/resources/templates/managerDashboard_employees.html
+++ b/src/main/resources/templates/managerDashboard_employees.html
@@ -194,6 +194,17 @@
                                 </svg>
                                 Email</a>
                         </th>
+                        <th>
+                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=position.positionName&sortDir=' + ${reverseSortDir}}">
+                                <svg th:if="${sortField.equals('position.positionName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-arrow" viewBox="0 0 16 16">
+                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
+                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
+                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+                                </svg>
+                                Квалификация</a>
+                        </th>
                         <th>Действия</th>
                     </tr>
                     </thead>
@@ -202,6 +213,7 @@
                         <td th:text="${employee.firstName}"></td>
                         <td th:text="${employee.lastName}"></td>
                         <td th:text="${employee.email}"></td>
+                        <td th:text="${employee.position.positionName}"></td>
                         <td><a th:href="@{/manager/employees/showUpdateForm/{id}(id=${employee.id})}"
                                class="btn btn-primary">Изменить</a>
                             <a th:href="@{/manager/employees/delete/{id}(id=${employee.id})}"
