--- a/src/main/resources/templates/update_customer.html
+++ b/src/main/resources/templates/update_customer.html
@@ -16,23 +16,33 @@
     <form action="#" th:action="@{/manager/customers/save}" th:object="${customer}"
           method="POST">
 
-        <!-- Add hidden form field to handle update -->
+        <div th:if="${#fields.hasErrors()}" class="alert alert-danger">
+            <p th:if="${#fields.hasErrors('firstName')}">- Имя должно быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('lastName')}">- Фамилия должна быть больше 1 и меньше 30 символов</p>
+            <p th:if="${#fields.hasErrors('email')}">- Почта должна быть больше 1 и меньше 50 символов</p>
+            <p th:if="${#fields.hasErrors('location')}">- Расположение должно быть больше 1 и меньше 50 символов</p>
+        </div>
+
         <input type="hidden" th:field="*{id}"/>
 
-        <input type="text" th:field="*{firstName}" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{firstName}"
+               th:class="${#fields.hasErrors('firstName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
-        <input type="text" th:field="*{lastName}" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{lastName}"
+               th:class="${#fields.hasErrors('lastName')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
-        <input type="text" th:field="*{email}" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{email}"
+               th:class="${#fields.hasErrors('email')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
-        <input type="text" th:field="*{location}" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{location}"
+               th:class="${#fields.hasErrors('location')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
 
         <button type="submit" class="btn btn-info col-2">Изменить</button>
     </form>
 
     <hr>
 
-    <a th:href="@{/manager/employees}">Вернуться к списку заказчикаов</a>
+    <a th:href="@{/manager/employees}">Вернуться к списку заказчиков</a>
 </div>
 </body>
 </html>
