--- a/src/main/resources/templates/managerDashboard_addTask.html
+++ b/src/main/resources/templates/managerDashboard_addTask.html
@@ -44,7 +44,7 @@
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="position-sticky pt-3">
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Проекты</span>
+                    <span>Проектные задачи</span>
                 </h6>
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -58,7 +58,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" th:href="@{/manager/employees}">
+                        <a class="nav-link" th:href="@{/manager/employees}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-heart" viewBox="0 0 16 16">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
@@ -105,7 +105,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/manager/tasks/showAddForm}">
+                        <a class="nav-link text-dark" th:href="@{/manager/tasks/showAddForm}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-tools" viewBox="0 0 16 16">
                                 <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z"/>
@@ -140,105 +140,49 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Управление сотрудниками</h1>
+                <h1 class="h2">Формирование задачи</h1>
             </div>
 
-            <div class="container my-2">
-                <a th:href="@{/manager/employees/showAddForm}" class="btn btn-success btn-sm mb-3"> Добавить
-                    сотрудника </a>
+            <div th:if="${param.success}">
+                <div class="alert alert-info">
+                    Задача успешно добавлена!
+                </div>
+            </div>
 
-                <table class="table table-striped table-responsive-md table-hover">
-                    <thead>
-                    <tr>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+            <form th:action="@{/manager/tasks/save}" th:object="${task}"
+                  method="POST">
 
-                                <svg th:if="${sortField.equals('firstName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Имя</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('lastName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Фамилия</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('email')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Email</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=position.positionName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('position.positionName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Квалификация</a>
-                        </th>
-                        <th>Действия</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="employee : ${listEmployees}">
-                        <td th:text="${employee.firstName}"></td>
-                        <td th:text="${employee.lastName}"></td>
-                        <td th:text="${employee.email}"></td>
-                        <td th:text="${employee.position.positionName}"></td>
-                        <td><a th:href="@{/manager/employees/showUpdateForm/{id}(id=${employee.id})}"
-                               class="btn btn-primary">Изменить</a>
-                            <a th:href="@{/manager/employees/delete/{id}(id=${employee.id})}"
-                               class="btn btn-danger">Удалить</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-                <span>
-                    Всего: [[${totalItems}]]
-                </span>
-                <div th:if="${totalPages > 1}" class="mt-3">
-                    <ul class="pagination">
-                        <li class="page-item" th:if="${currentPage != 1}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Предыдущая</a>
-                        </li>
-                        <li th:unless="${currentPage != 1}" class="page-item disabled"><a class="page-link" href="#">Предыдущая</a>
-                        </li>
-                        <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}">
-                            <a th:if="${currentPage != i}" class="page-link"
-                               th:href="@{'/manager/employees/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-                            <a class="page-link link-dark" th:unless="${currentPage != i}" href="#">[[${i}]]</a>
-                        </li>
-                        <li class="page-item" th:if="${currentPage < totalPages}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Следующая</a>
-                        </li>
-                        <li th:unless="${currentPage < totalPages}" class="page-item disabled">
-                            <a class="page-link" href="#">Следующая</a>
-                        </li>
-                    </ul>
+                <div th:if="${#fields.hasErrors()}" class="alert alert-danger">
+                    <p th:if="${#fields.hasErrors('name')}">- Имя должно быть больше 1 и меньше 30 символов</p>
+                    <p th:if="${#fields.hasErrors('description')}">- Описание должно быть больше 1 и меньше 300
+                        символов</p>
                 </div>
 
-            </div>
+                <input type="text" th:field="*{name}"
+                       placeholder="Название задачи"
+                       th:class="${#fields.hasErrors('name')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+                <textarea th:field="*{description}" placeholder="Описание"
+                          th:class="${#fields.hasErrors('description')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+                </textarea>
+
+                <label th:for="*{projectId}">Проект задачи</label>
+                <select th:field="*{projectId}"
+                        th:class="${#fields.hasErrors('projectId')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+                    <option th:each="project : ${listProjects}" th:value="${project.id}"
+                            th:text="${project.name}"></option>
+                </select>
+
+                <label th:for="*{status}">Статус</label>
+                <select th:field="*{status}"
+                        th:class="${#fields.hasErrors('status')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+                    <option value="Ожидает выполнения">Ожидает выполнения</option>
+                    <option value="Ожидает немедленного выполнения">Ожидает немедленного выполнения</option>
+                    <option value="Выполняется">Выполняется</option>
+                </select>
+
+                <button type="submit" class="btn btn-info col-2">Добавить</button>
+            </form>
 
         </main>
     </div>
