--- a/src/main/resources/templates/managerDashboard_addTeam.html
+++ b/src/main/resources/templates/managerDashboard_addTeam.html
@@ -13,6 +13,11 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 </head>
 <body>
 
@@ -44,7 +49,7 @@
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="position-sticky pt-3">
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Проекты</span>
+                    <span>Проектные задачи</span>
                 </h6>
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -58,7 +63,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" th:href="@{/manager/employees}">
+                        <a class="nav-link" th:href="@{/manager/employees}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-heart" viewBox="0 0 16 16">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
@@ -114,7 +119,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/manager/teams/showAddForm}">
+                        <a class="nav-link text-dark" th:href="@{/manager/teams/showAddForm}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-building" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
@@ -140,105 +145,52 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Управление сотрудниками</h1>
+                <h1 class="h2">Формирование команды</h1>
             </div>
 
-            <div class="container my-2">
-                <a th:href="@{/manager/employees/showAddForm}" class="btn btn-success btn-sm mb-3"> Добавить
-                    сотрудника </a>
+            <div th:if="${param.success}">
+                <div class="alert alert-info">
+                    Команды успешно создана!
+                </div>
+            </div>
 
-                <table class="table table-striped table-responsive-md table-hover">
-                    <thead>
-                    <tr>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+            <form th:action="@{/manager/teams/save}" th:object="${team}"
+                  method="POST">
 
-                                <svg th:if="${sortField.equals('firstName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Имя</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('lastName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Фамилия</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('email')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Email</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=position.positionName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('position.positionName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Квалификация</a>
-                        </th>
-                        <th>Действия</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="employee : ${listEmployees}">
-                        <td th:text="${employee.firstName}"></td>
-                        <td th:text="${employee.lastName}"></td>
-                        <td th:text="${employee.email}"></td>
-                        <td th:text="${employee.position.positionName}"></td>
-                        <td><a th:href="@{/manager/employees/showUpdateForm/{id}(id=${employee.id})}"
-                               class="btn btn-primary">Изменить</a>
-                            <a th:href="@{/manager/employees/delete/{id}(id=${employee.id})}"
-                               class="btn btn-danger">Удалить</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-                <span>
-                    Всего: [[${totalItems}]]
-                </span>
-                <div th:if="${totalPages > 1}" class="mt-3">
-                    <ul class="pagination">
-                        <li class="page-item" th:if="${currentPage != 1}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Предыдущая</a>
-                        </li>
-                        <li th:unless="${currentPage != 1}" class="page-item disabled"><a class="page-link" href="#">Предыдущая</a>
-                        </li>
-                        <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}">
-                            <a th:if="${currentPage != i}" class="page-link"
-                               th:href="@{'/manager/employees/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-                            <a class="page-link link-dark" th:unless="${currentPage != i}" href="#">[[${i}]]</a>
-                        </li>
-                        <li class="page-item" th:if="${currentPage < totalPages}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Следующая</a>
-                        </li>
-                        <li th:unless="${currentPage < totalPages}" class="page-item disabled">
-                            <a class="page-link" href="#">Следующая</a>
-                        </li>
-                    </ul>
+                <div th:if="${#fields.hasErrors()}" class="alert alert-danger">
+                    <p th:if="${#fields.hasErrors('officeLocation')}">- Расположение офиса должно иметь больше 1 и
+                        меньше 50 символов</p>
+                    <p th:if="${#fields.hasErrors('projectsIds')}">- Список проектов не может быть пустым</p>
+                    <p th:if="${#fields.hasErrors('usersIds')}">- Список сотрудников не может быть пустым</p>
                 </div>
 
-            </div>
+                <input type="text" th:field="*{officeLocation}"
+                       placeholder="Расположение офиса"
+                       th:class="${#fields.hasErrors('officeLocation')}? 'form-control mb-4 col-4 is-invalid' : 'form-control mb-4 col-4'">
+
+                <label th:for="*{projectsIds}">Проекты для команды</label>
+                <select th:field="*{projectsIds}"
+                        th:class="${#fields.hasErrors('projectsIds')}? 'selectpicker form-control mb-4 col-4 is-invalid' : 'selectpicker form-control mb-4 col-4'"
+                        multiple data-actions-box="true"
+                        data-live-search="true">
+                    <option th:each="project : ${listProjects}" th:value="${project.id}"
+                            th:text="${project.name}">
+                    </option>
+                </select>
+
+                <label th:for="*{usersIds}">Участники команды</label>
+                <select th:field="*{usersIds}"
+                        th:class="${#fields.hasErrors('usersIds')}? 'selectpicker form-control mb-4 col-4 is-invalid' : 'selectpicker form-control mb-4 col-4'"
+                        multiple data-actions-box="true"
+                        data-live-search="true">
+                    <option th:each="user : ${listUsers}" th:value="${user.id}"
+                            th:text="${user.firstName} + ' ' + ${user.lastName}">
+                    </option>
+                </select>
+
+                <button type="submit" class="btn btn-info col-2">Добавить</button>
+            </form>
+
 
         </main>
     </div>
