--- a/src/main/resources/templates/managerDashboard_teams.html
+++ b/src/main/resources/templates/managerDashboard_teams.html
@@ -44,7 +44,7 @@
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="position-sticky pt-3">
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Проекты</span>
+                    <span>Проектные задачи</span>
                 </h6>
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -58,7 +58,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" th:href="@{/manager/employees}">
+                        <a class="nav-link" th:href="@{/manager/employees}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-heart" viewBox="0 0 16 16">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
@@ -93,7 +93,7 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/manager/teams}">
+                        <a class="nav-link  text-dark" th:href="@{/manager/teams}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-people-fill" viewBox="0 0 16 16">
                                 <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
@@ -140,105 +140,49 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Управление сотрудниками</h1>
+                <h1 class="h2">Команды</h1>
             </div>
 
-            <div class="container my-2">
-                <a th:href="@{/manager/employees/showAddForm}" class="btn btn-success btn-sm mb-3"> Добавить
-                    сотрудника </a>
-
-                <table class="table table-striped table-responsive-md table-hover">
-                    <thead>
-                    <tr>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
-
-                                <svg th:if="${sortField.equals('firstName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Имя</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('lastName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Фамилия</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('email')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Email</a>
-                        </th>
-                        <th>
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage} + '?sortField=position.positionName&sortDir=' + ${reverseSortDir}}">
-                                <svg th:if="${sortField.equals('position.positionName')}" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-arrow" viewBox="0 0 16 16">
-                                    <path th:if="${reverseSortDir.equals('desc')}" fill-rule="evenodd"
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    <path th:if="${reverseSortDir.equals('asc')}" fill-rule="evenodd"
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                                </svg>
-                                Квалификация</a>
-                        </th>
-                        <th>Действия</th>
+            <table class="table table-bordered">
+                <tbody>
+                <div th:each="team : ${listTeams}">
+                    <tr class="table-primary">
+                        <td th:text="${team.officeLocation}" colspan="2"></td>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="employee : ${listEmployees}">
-                        <td th:text="${employee.firstName}"></td>
-                        <td th:text="${employee.lastName}"></td>
-                        <td th:text="${employee.email}"></td>
-                        <td th:text="${employee.position.positionName}"></td>
-                        <td><a th:href="@{/manager/employees/showUpdateForm/{id}(id=${employee.id})}"
-                               class="btn btn-primary">Изменить</a>
-                            <a th:href="@{/manager/employees/delete/{id}(id=${employee.id})}"
-                               class="btn btn-danger">Удалить</a>
+                    <tr>
+                        <td>
+                            <table class="table table-sm table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Члены команды</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user, state : ${team.users}">
+                                    <td th:text="${user.firstName} + ' ' + ${user.lastName}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                        <td>
+                            <table class="table table-sm table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Проекты</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="project, state : ${team.projects}">
+                                    <td th:text="${project.name}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </td>
                     </tr>
-                    </tbody>
-                </table>
-                <span>
-                    Всего: [[${totalItems}]]
-                </span>
-                <div th:if="${totalPages > 1}" class="mt-3">
-                    <ul class="pagination">
-                        <li class="page-item" th:if="${currentPage != 1}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Предыдущая</a>
-                        </li>
-                        <li th:unless="${currentPage != 1}" class="page-item disabled"><a class="page-link" href="#">Предыдущая</a>
-                        </li>
-                        <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}">
-                            <a th:if="${currentPage != i}" class="page-link"
-                               th:href="@{'/manager/employees/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-                            <a class="page-link link-dark" th:unless="${currentPage != i}" href="#">[[${i}]]</a>
-                        </li>
-                        <li class="page-item" th:if="${currentPage < totalPages}">
-                            <a th:href="@{'/manager/employees/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                               class="page-link">Следующая</a>
-                        </li>
-                        <li th:unless="${currentPage < totalPages}" class="page-item disabled">
-                            <a class="page-link" href="#">Следующая</a>
-                        </li>
-                    </ul>
                 </div>
 
-            </div>
+                </tbody>
+            </table>
 
         </main>
     </div>
