--- a/src/main/resources/templates/managerDashboard_customers.html
+++ b/src/main/resources/templates/managerDashboard_customers.html
@@ -31,7 +31,7 @@
                   d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
         </svg>
         <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" sec:authorize="isAuthenticated()" sec:authentication="name">Артём</a>
+            <a class="nav-link px-3" th:href="@{/updatePersonalInformation}" sec:authorize="isAuthenticated()" sec:authentication="name">Артём</a>
         </div>
         <div class="nav-item text-nowrap">
             <a class="nav-link px-3" th:href="@{/logout}">Выйти</a>
